Track encoder rollovers using ISR

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,4 @@
 platform = atmelavr
 board = feather32u4
 framework = arduino
-lib_deps = Adafruit BluefruitLE nRF51, SoftwareSerial
+lib_deps = Adafruit BluefruitLE nRF51, SoftwareSerial, digitalWriteFast
